# asynC

./: CMakeLists.txt  defer.c  defer.h  err.c  err.h  future.c  future.h  macierz.c  queue.c  queue.h  silnia.c  threadpool.c  threadpool.h  vector.h
test/: CMakeLists.txt  await_michaltyrolski.c  defer_michaltyrolski.c  minunit.h
